--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   }
   
   :root {
-    --primary: #2A7AE4;
+    --primary: #00b362;
     --black: #000000;
     --blackLighter: #9E9E9E;
     --grayLight: #F5F5F5;
@@ -24,3 +24,10 @@
   a {
     color: inherit;
   } 
+
+  #root{
+    min-height: calc(100vh - var(--bodyPaddingTop));
+    display: flex;
+    flex-direction: column;
+
+  }
