--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     --white: #FFFFFF;
     --frontEnd: #6BD1FF;
     --backEnd: #00C86F;
+    --trasparent: rgba(0, 0, 0, 0.404);
   }
   
   html,
