mudança nos videos

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   }
   
   :root {
-    --primary: #00b362;
+    --primary: #431157;
     --black: #000000;
     --blackLighter: #9E9E9E;
     --grayLight: #F5F5F5;
